<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"

    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

    </ProgressBar>

    <LinearLayout
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"></LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_Text"
        android:inputType="textEmailAddress"
        android:maxLines="1"></AutoCompleteTextView>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"></EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="@android:color/transparent"
        android:text="@string/login"
        android:textColor="#F4F4F4"
        android:textStyle="bold">

    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/createButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@android:color/transparent"
        android:text="@string/create_new_account"
        android:textColor="#F5F4F6"
        android:textStyle="bold">

    </Button>
</LinearLayout>