<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"

    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/createAccProgressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

    </ProgressBar>

    <LinearLayout
        android:id="@+id/accLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"></LinearLayout>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingBottom="17dp"></EditText>

    <AutoCompleteTextView
        android:id="@+id/emailAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:hint="@string/email_Text"
        android:inputType="textEmailAddress"
        android:maxLines="1"></AutoCompleteTextView>

    <EditText
        android:id="@+id/passwordAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"></EditText>


    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@android:color/transparent"
        android:text="@string/create_new_account"
        android:textColor="#EDECEF"
        android:textStyle="bold">

    </Button>
</LinearLayout>